complete section product and add footer

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <li><a href="">Pricing</a></li>
                 </ul>
                 <div class="header__login">
-                    <span class="lato_reg header__span">Sign in</span>
+                    <span class="lato_reg header__span"><a href="#">Sign in</a></span>
                     <button class="btn">Start Trial</button>
                 </div>
             </div>
@@ -98,31 +98,45 @@
         <section class="product">
             <div class="product__container">
                 <div class="product__inner">
-                    <div class="product__img">
-                        <img src="" alt="">
+                    <div class="product__profile">
+                        <div class="product__photo">
+                            <img class="product__img" src="img/avatar1.png" alt="Picture of person">
+                        </div>
                         <div class="product__card">
                             <h5 class="lato_semb text-h5">Customized For</h5>
                             <div class="line"></div>
-                            <img src="" alt="" class="card__img">
+                            <img src="img/avatar.png" alt="Picture of person" class="card__img">
                             <span class="card__span">Mikayla</span>
                             <p class="georgia_bold card_p">Your custom contents</p>
-                            <ul>
+                            <ul class="product__list">
                                 <li>Understand Your Stress</li>
                                 <li>Anger Management</li>
                             </ul>
                         </div>
                     </div>
                     <div class="product__text">
-                        <h4 class="lato_semb text-h4">Our product</h4>
-                        <h2 class="georgia_bold text-h2">You tell us your stress,
+                        <h4 class="lato_semb text-h4 product_h4">Our product</h4>
+                        <h2 class="georgia_bold text-h2 product_h2">You tell us your stress,
                             We make your diary</h2>
-                        <p class="lato_reg text-p">Everyone experiences stress in different ways.
-                        Let Alivio guide you, in a personalized journal experience, to overcome your stress.</p>
+                        <p class="lato_reg text-p product__text-p">Everyone experiences stress in different ways.
+                        Let Alivio guide you, in a personalized journal experience, to<br> overcome your stress.</p>
                         <button class="btn headline__btn lato_reg">Find your way</button>
                     </div>
                 </div>
             </div>
         </section>
     </main>
+
+    <footer class="footer">
+        <div class="footer__container">
+            <ul class="lato_med footer__nav">
+                <li class="footer__head"><a href="">Alivio</a></li>
+                <li><a href="">Why Alivio</a></li>
+                <li><a href="">Solutions</a></li>
+                <li><a href="">Community</a></li>
+                <li><a href="">Pricing</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
