add class header__btn

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </ul>
                 <div class="header__login">
                     <span class="lato_reg header__span"><a href="#">Sign in</a></span>
-                    <button class="btn">Start Trial</button>
+                    <button class="btn header__btn">Start Trial</button>
                 </div>
             </div>
             <div class="header__headline">
